<resources>
    <string name="app_name">FarmEzzy</string>
    <string name="about_us">About Us</string>
    <string name="dashboard">Dashboard</string>
    <string name="meet_farmers">Meet Farmers</string>
    <string name="visit_agrovets">Visit Agrovets</string>
    <string name="contact_experts">Contact Experts</string>
    <string name="disease_control">Disease Control</string>
    <string name="disease_diagnosis">Disease Diagnosis</string>
    <string name="crop_disease">Crop Disease</string>
    <string name="predict">Identify</string>
    <string name="capture">Capture</string>
    <string name="select_image">Select image</string>
    <string name="crop_image">Crop Image</string>
    <string name="select_crop_type">Select Crop to Diagnose</string>
    <string name="crop_type">Select Crop Type</string>
    <string name="maize">Maize</string>
    <string name="sugarcane">Sugarcane</string>
    <string name="banana">Banana</string>
    <string name="beans">Beans</string>
    <string name="smart_agrovet">FarmEzzy</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="place_of_residence">Place of residence</string>
    <string name="land_size">Size of Land in Acres</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login">Already registered, Login</string>
    <string name="new_use_register">New use, Register</string>
    <string name="login">Login</string>
    <string name="passd">Password</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
</resources>