<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/smart_agrovet"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginBottom="10dp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/FName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:autofillHints="First Name"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="80dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edtLname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/FName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="80dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edtLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtLname"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/baseline_location_on_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/place_of_residence"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="80dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edtLandSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtLocation"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/baseline_photo_size_select_small_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/land_size"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="80dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textColorHint="@color/white"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edtRegPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtLandSize"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/baseline_phone_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_marginEnd="80dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textColorHint="@color/white"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edtRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRegPhone"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_security_24"
            android:drawablePadding="10dp"
            android:layout_marginEnd="80dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edtRegConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRegPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_security_24"
            android:drawablePadding="10dp"
            android:layout_marginEnd="80dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtRegConfirmPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/btn_bg"
            android:text="@string/register"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/txtRegLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/already_registered_login"
            android:textColor="@color/white" />
    </RelativeLayout>

</ScrollView>