<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_agrovet"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="54dp"/>

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp"/>

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:textSize="24sp"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_below="@+id/txtLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="56dp"
            android:layout_marginEnd="80dp"
            tools:ignore="TextFields"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_security_24"
            android:drawablePadding="10dp"
            android:hint="@string/passd"
            android:textSize="24sp"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_below="@+id/txtPhone"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="48dp"
            android:layout_marginEnd="80dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textSize="24sp"
            android:background="@drawable/btn_bg"
            android:layout_below="@+id/txtPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="56dp"/>

        <TextView
            android:id="@+id/txtRegLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_use_register"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>