<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".DashboardActivity">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_view"/>

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_marginTop="-80dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="25dp"
        android:layout_below="@+id/top_view">

        <androidx.cardview.widget.CardView
            android:id="@+id/detectionCdView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="0"
            android:layout_margin="12dp"
            android:layout_column="0"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/plant_64"
                    android:contentDescription="@string/crop_disease" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disease_diagnosis"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/diseaseControlCdView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="12dp"
            android:layout_row="0"
            android:layout_column="1"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_baseline_settings_24"
                    android:contentDescription="@string/disease_control" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disease_control"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/expertsCdView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="12dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/expert_user_64"
                    android:contentDescription="@string/contact_experts" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_experts"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/agrovetsCdView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="12dp"
            android:layout_row="1"
            android:layout_column="1"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/home_24"
                    android:contentDescription="@string/visit_agrovets" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visit_agrovets"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/farmersCdView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="12dp"
            android:layout_row="2"
            android:layout_column="0"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="73dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/cultivation_img_64"
                    android:contentDescription="@string/meet_farmers" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meet_farmers"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/aboutCdView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="15dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="12dp"
            android:layout_row="2"
            android:layout_column="1"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/about_us_26"
                    android:contentDescription="@string/about_us" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>